# noface

./: .gitignore  Cargo.toml  README.md  config.json  makefile
.github/workflows/: default.yml
src/: config.rs  cv.rs  error.rs  gui.rs  image.rs  lib.rs  main.rs  math.rs  model.rs  processor.rs  setting.rs  sync.rs  tracing.rs
src/cv/: matrix.rs
src/gui/: cam.rs  messenger.rs  proc.rs  processor.rs  source_image.rs
src/gui/proc/: source.rs
src/gui/processor/: frame.rs  source.rs
src/model/: data.rs  detect_model.rs  detection_model.rs  embed_data.rs  recgn_model.rs  recognition_model.rs  swap_model.rs  tensor_data.rs  vectorization_model.rs
src/model/data/: face.rs  face_data.rs  graph.rs  recgn_data.rs  tensor.rs  tensor_data.rs  vectorized_tensor.rs
src/model/data/face/: keypoints.rs
src/processor/: tensor_data.rs
src/setting/: config.rs
src/sync/: channel_worker.rs  debounce.rs  result_worker.rs  sync_worker.rs  worker.rs
src/util/: worker.rs
