[package]
name = "noface"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.0", default-features = false, features = ["json"] }
eframe = { version = "0.28.1", default-features = false, features = ["accesskit", "default_fonts", "glow" ] }
egui_extras = { version = "0.28.1", default-features = false, features = ["image", "svg", "gif"] }
env_logger = {version="0.11.5", default-features = false, features = ["auto-color", "humantime"]}
image = { version = "0.25.2", default-features = false, features = ["rayon", "jpeg", "png"] }
log = "0.4.22"
ndarray = "0.16.1"
opencv = { version = "0.92.2", default-features = false, features = ["videoio"]}
rfd = "0.14.1"
serde = { version = "1.0.208", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.125", default-features = false }
tokio = { version = "1.39.3", default-features = false, features=["macros", "rt-multi-thread", "time"] }
